Query an associated collections
Extremely rough but I'm trying to exercise my "just do it" skill instead of my refactoring skills